--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -23,3 +23,5 @@ $container-max-widths: (
 
 $font-size-base: 1.1875rem;
 $small-font-size: 15px;
+
+$scroll-bar-width: 8px
